@@ -272,3 +272,6 @@ Patch from which changes to set SO_PRIORITY were based.
 
 Alexander Duyck
 Uncovering an out of bounds access of the netperf_output_source array.
+
+Bjoern A. Zeeb - a patch to enable netperf to correctly manipulate
+IPv6 addresses in the control message.
